fix z-index for menu-popover

--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -50,6 +50,7 @@
         .menu.visible {
             padding: 1rem;
             height: 110px;
+            z-index: 3;
         }
 
         .menu {
